@@ -1,0 +1,13 @@
+
+
+void initIPBanList();
+
+
+void freeIPBanList();
+
+
+
+void addBadConnectionForIP( char *inIPAddress );
+
+
+char isIPBanned( char *inIPAddress );
